<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Inline Skate Academy</string>
    <string name="activity_main_toast">Welcome to Inline Skate Academy!</string>
    <string name="main_title">Main categories</string>
    <string name="novice_title">Novice lessons</string>
    <string name="regular_title">Regular lessons</string>
    <string name="expert_title">Expert lessons</string>
    <string name="theory_title">Theory lessons</string>
    <string name="novice_image_desc">Meme Baby Doge</string>
    <string name="regular_image_desc">"Hardstuck here"</string>
    <string name="expert_image_desc">Giga Chad</string>
    <string name="theory_image_desc">Learn Pencil</string>
    <string name="lesson_image_desc">Image desc</string>
    <string name="lesson_title">Lesson title</string>
    <string name="lesson_description">Lesson description</string>
    <string name="novice_lesson_1_title">Forward Stride</string>
    <string name="novice_lesson_2_title">T-Stop</string>
    <string name="novice_lesson_3_title">Parallel Turn</string>
    <string name="novice_lesson_4_title">Slalom: Fish</string>
    <string name="novice_lesson_5_title">(Not a) jump!</string>
    <string name="novice_lesson_1_description">Baby steps</string>
    <string name="novice_lesson_2_description">Stopping to a literal T</string>
    <string name="novice_lesson_3_description">Be able to steer left and right</string>
    <string name="novice_lesson_4_description">Parallel Turns Part 2</string>
    <string name="novice_lesson_5_description">Use little hops to get over obstacles</string>
    <string name="regular_lesson_1_title">Backward Stride</string>
    <string name="regular_lesson_2_title">Crossovers</string>
    <string name="regular_lesson_3_title">Crossovers Backwards</string>
    <string name="regular_lesson_4_title">Jump 180</string>
    <string name="regular_lesson_5_title">Freestyle: Mohawk Eagle</string>
    <string name="regular_lesson_1_description">Baby steps backwards</string>
    <string name="regular_lesson_2_description">Cross your legs</string>
    <string name="regular_lesson_3_description">Cross your legs backwards</string>
    <string name="regular_lesson_4_description">Jump and turn around</string>
    <string name="regular_lesson_5_description">Skate sideways and look cool</string>
    <string name="expert_lesson_1_title">Speed Skating: Double Push</string>
    <string name="expert_lesson_2_title">Power Slide</string>
    <string name="expert_lesson_3_title">Skate down stairs</string>
    <string name="expert_lesson_4_title">Skate through uneven ground</string>
    <string name="expert_lesson_5_title">Single leg MASTERY</string>
    <string name="expert_lesson_1_description">Push twice per leg</string>
    <string name="expert_lesson_2_description">Stop with style</string>
    <string name="expert_lesson_3_description">Never have to stop for small stairs</string>
    <string name="expert_lesson_4_description">Like gravel, cobble stones or grass</string>
    <string name="expert_lesson_5_description">Acquire Enlightenment in Balance</string>
    <string name="theory_lesson_1_title">Rotate wheels</string>
    <string name="theory_lesson_1_description">Increase their grip and lifetime</string>
    <string name="theory_lesson_1_weblink">https://skating.thierstein.net/Knowledge/Inline_Skating_Rollerblading_Information_Wheel_rotation.html</string>
    <string name="theory_lesson_2_title">Inline Skate for fitness</string>
    <string name="theory_lesson_2_description">What muscles does inline skating train?</string>
    <string name="theory_lesson_2_weblink">https://www.livestrong.com/article/481644-what-muscles-does-rollerblading-work/</string>
    <string name="theory_lesson_3_title">Gym workout</string>
    <string name="theory_lesson_3_description">How to train for inline skating in the gym</string>
    <string name="theory_lesson_3_weblink">https://www.devaskation.com/workouts-for-all-skaters/</string>
    <string name="theory_lesson_4_title">Buying inline skates</string>
    <string name="theory_lesson_4_description">What to look for when buying inline skates</string>
    <string name="theory_lesson_4_weblink">https://www.inlinewarehouse.com/fitlc/skates/inline-skate-buying-guide.html</string>
    <string name="theory_lesson_5_title">Protective gear</string>
    <string name="theory_lesson_5_description">What to look for when buying protective gear</string>
    <string name="theory_lesson_5_weblink">https://inlineskatestars.com/inline-skating-gear-the-must-have-complete-gear-for-skaters/</string>
    <string name="novice_lesson_1_tutorial">
        \n<b>Forward Stride</b>\n\n
        &#8226; Start slow and use small steps\n
        &#8226; Keep the center of gravity low\n
        &#8226; Practice to stay on one foot\n
        &#8226; Look forward and not down
    </string>
    <string name="novice_lesson_2_tutorial">
        \n<b>T-Stop</b>\n\n
        &#8226; Start stopping with a low velocity\n
        &#8226; For the begging only use a few rolls at a time\n
        &#8226; Grind the ground for a few seconds then gradually progress\n
        &#8226; To increase pressure properly ensure that the front knee is bent low
    </string>
    <string name="novice_lesson_3_tutorial">
        \n<b>Parallel Turn</b>\n\n
        &#8226; Notice the inside and outside edges of your skates\n
        &#8226; Start with slight turns and then progress into sharper ones\n
        &#8226; Additionally lead with the shoulders and hips into the turn\n
        &#8226; Move the balance into the middle wheels and not the front or back
    </string>
    <string name="novice_lesson_4_tutorial">
        \n<b>Slalom: Fish</b>\n\n
        &#8226; After a parallel turn quickly scissor switch your stance\n
        &#8226; Shift the balance to the opposite side during each stance switch\n
        &#8226; Swing the arms into the opposite direction of the turns for balance\n
        &#8226; Keep the upper body straight
    </string>
    <string name="novice_lesson_5_tutorial">
        \n<b>(Not a) jump!</b>\n\n
        &#8226; Start with small hops\n
        &#8226; Swing the arms up for height\n
        &#8226; Bent the knees when landing to soften the impact\n
        &#8226; Additionally align the shoulders with the hips, knees and front wheels when landing
    </string>
    <string name="regular_lesson_1_tutorial">
        \n<b>Backward Stride</b>\n\n
        &#8226; Rotate and open your upper body to peek over the shoulders \n
        &#8226; Keep the center of gravity low\n
        &#8226; Start slow and use small steps\n
        &#8226; If you are not comfortable with backward skating, use a wall for support
    </string>
    <string name="regular_lesson_2_tutorial">
        \n<b>Crossovers</b>\n\n
        &#8226; Start with a wide stance\n
        &#8226; Rotate and lead with the upper body first and then…\n
        &#8226; … cross the legs in front of each other\n
        &#8226; Use the inside edges of the skates
    </string>
    <string name="regular_lesson_3_tutorial">
        \n<b>Crossovers Backwards</b>\n\n
        &#8226; Start with a wide stance\n
        &#8226; Rotate and lead with the upper body first and then…\n
        &#8226; … cross the legs in front of each other\n
        &#8226; Use the inside edges of the skates
    </string>
    <string name="regular_lesson_4_tutorial">
        \n<b>Jump 180</b>\n\n
        &#8226; Start with small hops\n
        &#8226; Swing the arms up and sideways for height and easier rotation\n
        &#8226; Bent the knees when landing to soften the impact\n
        &#8226; Additionally align the shoulders with the hips, knees and front wheels when landing
    </string>
    <string name="regular_lesson_5_tutorial">
        \n<b>Freestyle: Mohawk Eagle</b>\n\n
        &#8226; Keep the hips and center of gravity low\n
        &#8226; Start with very slow speed and spread your legs\n
        &#8226; Pointing the toes is easier when hips are low\n
        &#8226; Use the inside edges for the mohawk and the outside edges for the eagle
    </string>
    <string name="expert_lesson_1_tutorial">
        \n<b>Speed Skating: Double Push</b>\n\n
        &#8226; Start the first push with a aerodynamic forward stride (Novice Lesson 1)\n
        &#8226; Now shift the weight to the opposite leg and push with the outer edge first… \n
        &#8226; … then transfer to the inside edge, while the other leg comes back to the center\n
        &#8226; repeat the cycle by shifting the weight to the other leg
        &#8226; Be sure to have your hips parallel to the ground at all times
    </string>
    <string name="expert_lesson_2_tutorial">
        \n<b>Power Slide</b>\n\n
        &#8226; Start with a low velocity and progress to higher velocities\n
        &#8226; Shift the weight to the front leg and start a very sharp parallel side turn…\n
        &#8226; … with the front leg being fixed perpendicular to the direction of movement\n
        &#8226; Apply moderate pressure to the inside edge of the back leg to grind the ground\n
        &#8226; Be sure to keep the weight on the front leg and not the back leg
    </string>
    <string name="expert_lesson_3_tutorial">
        \n<b>Skate down stairs</b>\n\n
        &#8226; Start with low quantity and flatter stairs\n
        &#8226; Keep the center of gravity very low and shift the balance to the back leg\n
        &#8226; Be sure to not look at the stairs and instead concentrate on where to land\n
        &#8226; Use the arms for balance, where the front arm is pointing towards the landing spot
    </string>
    <string name="expert_lesson_4_tutorial">
        \n<b>Skate through uneven ground</b>\n\n
        &#8226; Start with low quantity, flatter gravel and slow velocity\n
        &#8226; Keep the center of gravity very low and have both legs scissor close to each other\n
        &#8226; Balance the weight on both legs and not just one\n
        &#8226; Be sure to not look at the gravel and instead concentrate on the destination\n
        &#8226; The most difficult part is the first step, so start with a small hop and fight through it
    </string>
    <string name="expert_lesson_5_tutorial">
        \n<b>Single leg MASTERY</b>\n\n
        &#8226; Being able to control well with one foot requires immense balance…\n
        &#8226; … and the video demonstrates multiple exercises for that\n
        &#8226; So this lesson is currently the last and a new skill level will be released in the next product update!\n
        &#8226; Until then, be sure to keep practicing and have fun :)
    </string>
    <string name="novice_lesson_1_yt_video" tools:ignore="StringFormatInvalid">
        <![CDATA[
            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/mBgZ8jLydFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        ]]>
    </string>
    <string name="novice_lesson_2_yt_video" tools:ignore="StringFormatInvalid">
        <![CDATA[
            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JhUDmgMa78c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        ]]>
    </string>
    <string name="novice_lesson_3_yt_video" tools:ignore="StringFormatInvalid">
        <![CDATA[
            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSkY7cS4sDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        ]]>
    </string>
</resources>