<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/novice_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/novice"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/novice_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/novice_image_desc"
                    android:rotationY="180"
                    app:srcCompat="@drawable/novice_image" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/regular_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/regular"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/regular_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/regular_image_desc"
                    app:saturation="0.7"
                    app:srcCompat="@drawable/regular_image" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/expert_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/expert"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/expert_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:layout_width="125dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/expert_image_desc"
                    android:rotationY="180"
                    app:brightness="1.1"
                    app:saturation="1.1"
                    app:srcCompat="@drawable/expert_skater" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/theory_cardview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/theory"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/theory_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/theory_image_desc"
                    android:rotationY="180"
                    app:srcCompat="@drawable/theory_image" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>