<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_lesson"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_lesson_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/lesson_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/lesson_image_desc"
                android:scaleType="fitCenter"
                tools:background="@color/white"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/ic_launcher_foreground" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/lesson_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/card_view_lesson_image"
            android:layout_toEndOf="@id/card_view_lesson_image"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/lesson_title" />

        <TextView
            android:id="@+id/lesson_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lesson_title"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/card_view_lesson_image"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/lesson_description" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>